Tue Dec 18 14:43:02 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/Sock_Connect.cpp:
	* ace/config-cygwin32-common.h:
	  Use the #include /**/ trick to shut up the WinCE warnings.

Tue Dec 18 22:05:04 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/make_release: Added comment to indicate the problem in
	  producing diffs  when a beta after a major or minor release is
	  cut. This needs fixing. Will get to this when the other pending
	  changes go in.

Tue Dec 18 16:01:59 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS_Dirent.cpp (readdir_emulation): Fixed an "off-by-one"
	  memory allocation error.  Thanks to Kyle Brost
 	  <Kyle.Brost@quest.com> for reporting this.

Mon Dec 17 09:04:28 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.i (ctime_r): Replaced ACE_OS::strsncpy() with
	  ACE_OS::strncpy() to fix a bug on Linux.  Thanks to Vlado
 	  Chovanec <Vladimir.CHOVANEC@asset.sk> for reporting this.
	  This fixes BugID 1101.

Tue Dec 18 13:04:07 2001  Carlos O'Ryan  <coryan@uci.edu>

	* bin/make_pretty.pl:
	  Incorporate numerous pending changes and improvements.

Tue Dec 18 12:45:45 2001  Carlos O'Ryan  <coryan@uci.edu>

	* bin/nightlybuilds/builds.lst:
	  Updated to use the new build standard.

	* bin/nightlybuilds/scoreboard_update.pl:
	  Incorporate changes to support multiple "groups" (for external
	  builds), to print out the last reported status of each build
	  (such as "COMPILING"), and to adjust the build timeouts on a
	  per-build basis.

Tue Dec 18 11:11:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/SPIPE.h: Improved comments for Doxygen processing.

Mon Dec 17 18:30:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/SPIPE_Acceptor.(h cpp): For Windows, use the event handle
	  instead of the pipe handle for the handle value stored in the
	  ACE_IPC_SAP class. The pipe handle is pretty useless for doing
	  anything like detecting when the pipe connect is done - the